--- a/style.css
+++ b/style.css
@@ -70,6 +70,10 @@ p {
   line-height: 1.5em;
 }
 
+p:last-child {
+  margin-bottom: 0;
+}
+
 strong {
   font-weight: 800;
   color: var(--color-primary);
@@ -89,17 +93,16 @@ main {
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
+  padding: 0 var(--spacing-6);
 }
 
 .intro-chunk {
-  margin-top: var(--spacing-24);
-  margin-bottom: var(--spacing-16);
-  padding: var(--spacing-6);
+  max-width: 415px;
+  padding: var(--spacing-24) 0 var(--spacing-16);
 }
 
 .card {
-  margin-top: var(--spacing-16);
-  margin-bottom: var(--spacing-16);
+  margin: var(--spacing-16);
   border-bottom: solid var(--spacing-2) var(--color-neutral-1);
   padding: var(--spacing-6);
 
@@ -115,4 +118,9 @@ main {
   padding: var(--spacing-4) var(--spacing-8) calc(var(--spacing-4) - 1px);
 
   background-color: var(--color-secondary);
+}
+
+.max-width-wrapper > .card {
+  margin-left: calc(-1 * var(--spacing-6));
+  margin-right: calc(-1 * var(--spacing-6));
 }
